Incorrect warning when using mongos with keyfile: Access control is not enabled for the database

XMLWordPrintableJSON

    • Fully Compatible
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Updated to version 3.2.5 today:
      Warning in mongos at start up or at connection on it, whereas authentification is enabled on mongod and mongos (via a keyfile) :

      2016-04-19T09:39:51.226+0200 I CONTROL  [main] ***** SERVER RESTARTED *****
      2016-04-19T09:39:51.232+0200 I CONTROL  [main]
      2016-04-19T09:39:51.232+0200 I CONTROL  [main] ** WARNING: Access control is not enabled for the database.
      2016-04-19T09:39:51.232+0200 I CONTROL  [main] **          Read and write access to data and configuration is unrestricted.
      2016-04-19T09:39:51.232+0200 I CONTROL  [main]
      2016-04-19T09:39:51.268+0200 I CONTROL  [mongosMain] db version v3.2.5
      2016-04-19T09:39:51.268+0200 I CONTROL  [mongosMain] git version: 34e65e5383f7ea1726332cb175b73077ec4a1b02
      2016-04-19T09:39:51.268+0200 I CONTROL  [mongosMain] OpenSSL version: OpenSSL 1.0.1k 8 Jan 2015
      2016-04-19T09:39:51.268+0200 I CONTROL  [mongosMain] allocator: tcmalloc
      2016-04-19T09:39:51.268+0200 I CONTROL  [mongosMain] modules: none
      2016-04-19T09:39:51.268+0200 I CONTROL  [mongosMain] build environment:
      2016-04-19T09:39:51.268+0200 I CONTROL  [mongosMain]     distmod: debian71
      2016-04-19T09:39:51.268+0200 I CONTROL  [mongosMain]     distarch: x86_64
      2016-04-19T09:39:51.268+0200 I CONTROL  [mongosMain]     target_arch: x86_64
      

      MongoDB shell version: 3.2.5
      Enter password:
      connecting to: xxxxx
      Server has startup warnings:

      2016-04-19T11:34:02.080+0200 I CONTROL  [main]
      2016-04-19T11:34:02.080+0200 I CONTROL  [main] ** WARNING: Access control is not enabled for the database.
      2016-04-19T11:34:02.080+0200 I CONTROL  [main] **          Read and write access to data and configuration is unrestricted.
      2016-04-19T11:34:02.080+0200 I CONTROL  [main]
      

      No configuration changed.

      For comparaison purpose, version 3.2.4 :

      2016-04-11T12:55:06.566+0200 I CONTROL  [main] ***** SERVER RESTARTED *****
      2016-04-11T12:55:06.603+0200 I CONTROL  [mongosMain] db version v3.2.4
      2016-04-11T12:55:06.603+0200 I CONTROL  [mongosMain] git version: e2ee9ffcf9f5a94fad76802e28cc978718bb7a30
      2016-04-11T12:55:06.603+0200 I CONTROL  [mongosMain] OpenSSL version: OpenSSL 1.0.1k 8 Jan 2015
      2016-04-11T12:55:06.603+0200 I CONTROL  [mongosMain] allocator: tcmalloc
      2016-04-11T12:55:06.603+0200 I CONTROL  [mongosMain] modules: none
      2016-04-11T12:55:06.603+0200 I CONTROL  [mongosMain] build environment:
      2016-04-11T12:55:06.603+0200 I CONTROL  [mongosMain]     distmod: debian71
      2016-04-11T12:55:06.603+0200 I CONTROL  [mongosMain]     distarch: x86_64
      2016-04-11T12:55:06.603+0200 I CONTROL  [mongosMain]     target_arch: x86_64
      

            Assignee:
            Shane Harvey (Inactive)
            Reporter:
            Mingming Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: