SERVER-23796 Fix incorrect access control startup warning